[package]
name = "hackernews"
version = "0.1.0"
authors = ["m104 <zhoupeng16@sina.cn>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
